Fixed error code that controls the score changing system

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         </dev>
         <dev class="body">
         <h1 class="p">You</h1>
+        <h1 class="p">Tie</h1>
         <h1 class="p">Computer</h1>
         <dev class="break"></dev>
         <h1 class="p" id="scoreuser">0</h1>
+        <h1 class ="p" id="tie">0</h1>
         <h1 class="p" id="scorecomp">0</h1>
         </dev>
     </body>
